--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -38,3 +38,18 @@
     }
   }
 }
+
+// Light theme
+[data-theme="light"] {
+  .profile-top-bar {
+    &__btn {
+      background: rgba(33, 160, 56, 0.1);
+      color: #21a038;
+      box-shadow: 0px 0px 20px rgba(33, 160, 56, 0.1);
+
+      &:hover {
+        background: rgba(33, 160, 56, 0.18);
+      }
+    }
+  }
+}
