--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -1,13 +1,13 @@
 .profile-top-bar {
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 50;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding: 10px 0;
-  background: transparent;
+  background: #090909;
 
   &__btn {
     display: flex;
@@ -42,6 +42,8 @@
 // Light theme
 [data-theme="light"] {
   .profile-top-bar {
+    background: #f8faf8;
+
     &__btn {
       background: rgba(33, 160, 56, 0.1);
       color: #21a038;
